# atomicslice

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  test.rs
